rip all the complex stuff out of the template. keep it basic